--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,13 @@ Pos=1484,67
 Size=405,489
 Collapsed=0
 
+[Window][Test]
+Pos=60,60
+Size=296,99
+Collapsed=0
+
+[Window][Example: Console]
+Pos=258,259
+Size=520,600
+Collapsed=0
+
