--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# IDE Files, this might change in the future
+.vs
+.vscode
