For no reason wsl binary stopped launching, as it used to be on msys2, on ubuntu it seems like it only works with Findassimp.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ endif()
 
 file(GLOB sources src/*.cpp)
 file(GLOB test_sources src/tests/*.cpp)
-add_executable(${PROJECT_NAME} ${sources} ${test_sources})
+add_executable(${PROJECT_NAME} WIN32 ${sources} ${test_sources})
 
 add_subdirectory(src/vendor/glm)
 add_subdirectory(src/vendor/glfw)
